--- a/src/LongManager/Htmls/pages/welcome.html
+++ b/src/LongManager/Htmls/pages/welcome.html
@@ -5,7 +5,7 @@
     <style>
         .button {
             background-color: rgb(103,58,183);
-            margin: 10px 0px 20px 35px;
+            margin: 6px 0px 20px 35px;
             height: 38px;
             width: 250px;
             color: white;
@@ -13,7 +13,7 @@
     </style>
 </head>
 
-<body style="height: 100%; margin: 0">
+<body style="height: 100%; margin: 0;background-color:rgb(233,235,238)">
     <div>
         <button class="button" onclick="jsObject.showMsg('JS调用后台C#方法')">borwser调用wpf中注册的方法</button>
     </div>
